--- a/src/pages/Popup/index.css
+++ b/src/pages/Popup/index.css
@@ -1,14 +1,15 @@
 body {
-  width: 300px;
-  height: 260px;
+  width: 320px;
   margin: 0;
+  padding: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-
   position: relative;
+  box-sizing: border-box;
+  overflow-x: hidden;
 }
 
 code {
