--- a/src/pages/Popup/index.css
+++ b/src/pages/Popup/index.css
@@ -1,18 +1,7 @@
+/* Popup-specific body constraints. Base styles (font, box-sizing) come from styles/base.css */
 body {
-  width: 320px;
-  margin: 0;
-  padding: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  width: 450px;
+  max-height: 860px;
   position: relative;
-  box-sizing: border-box;
   overflow-x: hidden;
-}
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
 }
