--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -16,6 +16,8 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   color: var(--color-text);
+  background-color: var(--color-bg-page);
+  transition: background-color 0.2s, color 0.2s;
 }
 
 code {
